# OTUS_6

./: README.md  pyproject.toml
.github/workflows/: test.yml
config/: celery.py  settings.py  urls.py
store_app/: admin.py  apps.py  forms.py  models.py  pytest.ini  tasks.py  urls.py  views.py
store_app/management/commands/: generate_data.py
store_app/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_product_category.py
store_app/templates/store_app/: add_categoryt.html  add_product.html  base.html  category_list.html  category_products.html  delete_product.html  edit_category.html  edit_product.html  index.html  menu.html  product_list.html  products_detail.html
store_app/tests/: conftest.py  test_celery.py  test_forms.py  test_models.py  test_templates.py  test_views.py
